<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_get_start"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="231dp"
        android:layout_height="109dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/join_with_green_lanka"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:text= "@string/you_are"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/black"
        />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="305dp"
        android:layout_height="195dp"
        android:background="@drawable/get_bg_area"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:textStyle="bold"
            android:checked="true"
            android:text="@string/user"
            />

        <RadioButton
            android:id="@+id/radioCollector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text"
            android:checked="false"
            android:ems="10"
            android:textStyle="bold"
            android:text="@string/collector"

            />
    </RadioGroup>

    <Button
        android:id="@+id/btnGetStart"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="#a0bdb3"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/get_start"
        android:textSize="20sp" />
</LinearLayout>
