<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_get_start"
    tools:context=".Collector_Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:text= "@string/ready_to_join_with_new_customers"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="20dp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

            <LinearLayout
                android:id="@+id/radioGroup"
                android:layout_width="333dp"
                android:layout_height="500dp"
                android:background="@drawable/get_bg_area"
                android:layout_gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/loginscrn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text= "@string/sign_up_here"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />




                <EditText
                    android:id="@+id/txtBusinessNameCR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:gravity="center"
                    android:hint="@string/enter_business_name"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/txtBusinessIdCR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:gravity="center"
                    android:hint="@string/enter_business_id"
                    android:padding="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/txtIDCR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:gravity="center"
                    android:hint="@string/collector_id"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/txtEmailCR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/txtPwdCR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/enter_password"
                    android:ems="14"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />

                <EditText
                    android:id="@+id/txtCpwdCR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:ems="14"
                    android:hint="@string/confirm_password"
                    android:background="@drawable/rounded_edit_text"
                    android:textColor="@color/black"
                    android:gravity="center"/>

                <Button
                    android:id="@+id/btnLoginCR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up"/>


                <TextView android:id="@+id/lnkLoginC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:text="@string/please_click_here_for_login"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#3F51B5"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
