<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_get_start"
    tools:context=".User_Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/ready_to_earn_n_money_from_your_garbage"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="20dp"
                android:textStyle="bold"/>
            

            <LinearLayout
                android:id="@+id/radioGroup"
                android:layout_width="333dp"
                android:layout_height="417dp"
                android:background="@drawable/get_bg_area"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text= "@string/sign_up_here"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    />


                <EditText
                    android:id="@+id/txtNameUR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:gravity="center"
                    android:hint="@string/enter_user_name"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/txtEmailUR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:hint="@string/enter_email"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />

                <EditText
                    android:id="@+id/txtPwdUR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:background="@drawable/rounded_edit_text"
                    android:hint="@string/enter_password"
                    android:ems="14"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />


                <EditText
                    android:id="@+id/txtCPWUR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:ems="14"
                    android:hint="@string/confirm_password"
                    android:background="@drawable/rounded_edit_text"
                    android:textColor="@color/black"
                    android:gravity="center"/>



                <Button
                    android:id="@+id/btnLoginUR"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up" />

                <TextView android:id="@+id/lnkLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="@string/please_click_here_for_login"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="#3F51B5"/>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>
