<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Add_Item"
    android:background="@drawable/bg_get_start"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                app:navigationIcon="@drawable/menu" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/add_item"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lyt_set_location"
                android:layout_marginTop="10dp"
                android:layout_width="333dp"
                android:background="@drawable/get_bg_area"
                android:layout_height="550dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/set_location" />

                    <Button
                        android:id="@+id/btn_set_location"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_height="wrap_content"
                        android:text="@string/set"
                        android:layout_marginStart="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude" />

                    <TextView
                        android:id="@+id/tv_latUAI"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ss" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude" />

                    <TextView
                        android:id="@+id/tv_longtUAI"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ss" />


                </LinearLayout>

                <Button
                    android:id="@+id/btnSeeOnMapUAI"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:text="@string/see_on_map" />

                <EditText
                    android:id="@+id/txtAddressUAI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:gravity="center"
                    android:hint="@string/enter_address"
                    android:padding="5dp"
                    android:textColor="@color/black" />

                <Spinner android:id="@+id/spinnerUAI"
                    android:layout_width="match_parent"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/spinnerItems"
                    android:background="@drawable/rounded_edit_text"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"/>

                <EditText
                    android:id="@+id/txtQuantityUAI"
                    android:layout_width="wrap_content"
                    android:layout_height="69dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:lines="3"
                    android:inputType="textMultiLine"
                    android:minLines="2"
                    android:hint="@string/enter_description"
                    android:padding="5dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/txtContactUAI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_edit_text"
                    android:ems="14"
                    android:gravity="center"
                    android:maxLength="10"
                    android:hint="@string/enter_contact_number"
                    android:padding="5dp"
                    android:textColor="@color/black" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <Button
                        android:id="@+id/btnSendUAI"
                        android:layout_width="200dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:text="@string/send" />

                    <Button
                        android:id="@+id/btnCancelUAI"
                        android:layout_width="200dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:text="@string/cancel" />


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </ScrollView>



</androidx.drawerlayout.widget.DrawerLayout>