<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/bg_get_start"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="100dp"
            android:text="@string/welcome_to_green_lanka"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/radioGroup"
            android:layout_width="333dp"
            android:layout_height="370dp"
            android:background="@drawable/get_bg_area"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loginscrn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_login"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"/>


            <EditText
                android:id="@+id/txtUNameLU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/rounded_edit_text"
                android:ems="14"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/enter_user_name"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtPasswordLU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:background="@drawable/rounded_edit_text"
                android:ems="14"
                android:gravity="center"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/btnLoginLU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:text="@string/login"
                android:gravity="center"/>

            <TextView
                android:id="@+id/lnkRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/new_user_register_here"
                android:textColor="#3F51B5"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>