<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_get_start"
    tools:context=".Collector_Home"
    android:fitsSystemWindows="true"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="0dp">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                app:navigationIcon="@drawable/menu" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"
                android:text="@string/green_lanka"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/radioGroup"
                android:layout_width="333dp"
                android:layout_height="417dp"
                android:background="@drawable/get_bg_area"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_a_nice_day"
                    android:layout_marginTop="30dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnCollectItemsCH"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_gravity="center"
                    android:text="@string/collect_items" />




                <TextView
                    android:id="@+id/contactUSCH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/any_issue_please_contact_us"
                    android:textColor="#3F51B5"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>